--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,15 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/scss/imports"
+              ]
+            },
             "styles": [
-              "src/styles.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.scss",
+              "src/assets/scss/reset.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
