fix conflict and add modal-component

--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,10 @@
               "src/styles.scss",
               "src/assets/scss/reset.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
