--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "~4.0.0",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "ngx-perfect-scrollbar": "^7.2.1",
     "popper.js": "~1.14.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
